--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 <body>
     <!-- Clock in left corner -->
     <div class="clock">
-        <img src="clock.png" alt="Clock">
+        <img src="Clock.png" alt="Clock">
         <div class="clock-text">
             <div class="clock-text-item active">Oct. 6. 2025 (10 stops)</div>
             <div class="clock-text-item">Oct. 7. 2025 (13 stops)</div>
